--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,6 +2,5 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSE Motors</title>
-    <link href="/css/styles.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" href="/public/css/styles.css" media="screen">
 </head>
-  
